--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,11 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-auth-session": "^3.7.1",
+    "expo-google-app-auth": "^10.0.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "expo-web-browser": "^11.0.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-dom": "18.0.0",
