--- a/app/package.json
+++ b/app/package.json
@@ -23,10 +23,12 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.2.0",
     "react-native-web": "~0.18.7",
     "react-native-wind": "^1.1.4",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "expo-sqlite": "~10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
