--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-auth-session": "^3.7.1",
+    "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "expo-web-browser": "^11.0.0",
@@ -20,15 +21,17 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-button-component": "^0.2.28",
     "react-native-heroicons": "^3.2.0",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-really-awesome-button": "^2.0.3",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.2.0",
     "react-native-web": "~0.18.7",
     "react-native-wind": "^1.1.4",
-    "tailwindcss-react-native": "^1.7.10",
-    "expo-sqlite": "~10.3.0"
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
