--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.2.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.18.7",
     "react-native-wind": "^1.1.4",
     "tailwindcss-react-native": "^1.7.10"
