--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-native-button-component": "^0.2.28",
     "react-native-heroicons": "^3.2.0",
     "react-native-material-ripple": "^0.9.1",
+    "react-native-modal": "^13.0.1",
     "react-native-really-awesome-button": "^2.0.3",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
