--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.69.6",
     "react-native-button-component": "^0.2.28",
     "react-native-heroicons": "^3.2.0",
+    "react-native-mask-input": "^1.2.2",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-really-awesome-button": "^2.0.3",
