--- a/app/package.json
+++ b/app/package.json
@@ -9,13 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-auth-session": "^3.7.1",
-    "expo-linear-gradient": "~11.4.0",
     "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
@@ -31,8 +29,6 @@
     "react-native-mask-input": "^1.2.2",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
-    "react-native-picker-horizontal": "^0.1.2",
-    "react-native-radio-buttons-group": "^2.2.11",
     "react-native-really-awesome-button": "^2.0.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -42,7 +38,8 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.18.7",
     "react-native-wind": "^1.1.4",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
