--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.13",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-auth-session": "^3.7.1",
+    "expo-linear-gradient": "~11.4.0",
     "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
@@ -38,8 +40,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.18.7",
     "react-native-wind": "^1.1.4",
-    "tailwindcss-react-native": "^1.7.10",
-    "expo-linear-gradient": "~11.4.0"
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
