--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.13",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -22,15 +23,19 @@
     "expo-web-browser": "^11.0.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-button-component": "^0.2.28",
     "react-native-circular-progress-indicator": "^4.4.0",
+    "react-native-countdown-component": "^2.7.1",
+    "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-mask-input": "^1.2.2",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-really-awesome-button": "^2.0.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
