--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.69.6",
     "react-native-button-component": "^0.2.28",
     "react-native-circular-progress-indicator": "^4.4.0",
+    "react-native-collapsible": "^1.6.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "~2.5.0",
@@ -37,6 +38,7 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-really-awesome-button": "^2.0.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -46,8 +48,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.18.7",
     "react-native-wind": "^1.1.4",
-    "tailwindcss-react-native": "^1.7.10",
-    "react-native-pager-view": "5.4.24"
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
