--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/checkbox": "^0.5.13",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/drawer": "^6.5.0",
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-auth-session": "^3.7.1",
+    "expo-checkbox": "~2.2.0",
     "expo-linear-gradient": "~11.4.0",
     "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
@@ -28,6 +29,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-button-component": "^0.2.28",
+    "react-native-check-box": "^2.1.7",
     "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-collapsible": "^1.6.0",
     "react-native-countdown-component": "^2.7.1",
